# uAuditAnalyzer2

./: .gitignore  CMakeLists.txt  README.md  compiler.pri  defs.h  uAuditAnalyzer.pro  uAuditAnalyzer2.pro
config/: config.ini
config/actions/: sendxmpp.ini
config/rules/: environment.ini  level0-3_alerts.ini
etc/uauditanalyzer/uanlz_alert/: actions.json  config.ini  inputs.json  rpcca.crt
etc/uauditanalyzer/uanlz_alert/actions.d/: sendmsg.ini
etc/uauditanalyzer/uanlz_alert/receptors.d/: alerts.ini
etc/uauditanalyzer/uanlz_alert/rules.d/: executions.ini
etc/uauditanalyzer/uanlz_log2json/dispatchers.d/: remotelog.ini
etc/uauditanalyzer/uanlz_log2json/receptors.d/: rsyslogauditd.ini
etc/uauditanalyzer/uanlz_web/: config.ini  snakeoil.crt
oldstuff/config-actions.d/: sendxmpp.ini-dist
oldstuff/config-rules.d/: testcommand.ini-dist
rpm/: build.spec
src/: globals.cpp  globals.h  globals_ext.h  main.cpp  serverapp.cpp  serverapp.h  status.cpp  status.h
src/events/: audit_class.cpp  audit_class.h  audit_event.cpp  audit_event.h  audit_host.cpp  audit_host.h  audit_var.cpp  audit_var.h  eventsmanager.cpp  eventsmanager.h
src/input/: tcplineprocessor.cpp  tcplineprocessor.h
src/output/: output_base.cpp  output_base.h  output_jsontcp.cpp  output_jsontcp.h  output_postgresql.cpp  output_postgresql.h  processorthreads_output.cpp  processorthreads_output.h
src/rawlogs/: rawlogs_host.cpp  rawlogs_host.h  rawlogs_manager.cpp  rawlogs_manager.h
src/rules/: rules.cpp  rules.h
src/vars/: namedefs.cpp  namedefs.h
systemd/: uauditanalyzer.service
uanlz_alert/: CMakeLists.txt  README.md  serverapp.cpp  serverapp.h  uanlz_alert.pro
uanlz_alert/config-rules.d/: level0-3_alerts.ini-dist  logins.ini-dist
uanlz_alert/etc/systemd/system/: uanlz_alert.service
uanlz_alert/etc/uauditanalyzer/uanlz_alert/: config.ini  rules.json
uanlz_alert/src/: globals.cpp  globals.h  main.cpp  rpcimpl.cpp  rpcimpl.h  wsfunctions.cpp
uanlz_alert/src/input/: inputs.cpp  inputs.h  tcplineprocessor.cpp  tcplineprocessor.h  tcpserver.cpp  tcpserver.h
uanlz_alert/src/rules/: rules.cpp  rules.h
uanlz_log2json/: CMakeLists.txt  README.md  example_input.txt  example_output.txt  uanlz_log2json.pro
uanlz_log2json/etc/systemd/system/: uanlz_log2json.service
uanlz_log2json/etc/uauditanalyzer/uanlz_log2json/: config.ini
uanlz_log2json/etc/uauditanalyzer/uanlz_log2json/dispatchers.d/: alerts.ini
uanlz_log2json/etc/uauditanalyzer/uanlz_log2json/receptors.d/: rsyslogauditd.ini
uanlz_log2json/src/: config.h.in  globals.cpp  globals.h  main.cpp  rpcimpl.cpp  rpcimpl.h
uanlz_log2json/src/events/: audit_class.cpp  audit_class.h  audit_event.cpp  audit_event.h  audit_host.cpp  audit_host.h  audit_var.cpp  audit_var.h  events_distributionthreads.cpp  events_distributionthreads.h  events_manager.cpp  events_manager.h
uanlz_log2json/src/input/: inputs.cpp  inputs.h  tcplineprocessor.cpp  tcplineprocessor.h  tcpserver.cpp  tcpserver.h
uanlz_log2json/src/output/: output_base.cpp  output_base.h  output_jsontcp.cpp  output_jsontcp.h  outputs.cpp  outputs.h
uanlz_log2json/src/vars/: namedefs.cpp  namedefs.h
uanlz_web/: CMakeLists.txt  README.md  uanlz_web.pro
uanlz_web/etc/systemd/system/: uanlz_web.service
uanlz_web/etc/uauditanalyzer/uanlz_web/: config.ini  snakeoil.key
uanlz_web/src/: globals.cpp  globals.h  loginrpcclientimpl.cpp  loginrpcclientimpl.h  main.cpp  rpcserver.h.autosave  rpcserverimpl.cpp  rpcserverimpl.h  webserverimpl.cpp  webserverimpl.h  wsfunctions.cpp  wsfunctions.h
uanlz_web/var/www/uauditweb/: inc.footer.html  inc.header.html  inc.layout.leftpanel.footer.html  inc.layout.leftpanel.header.html  inc.layout.leftpanel.middle.html  index.html  login.html  resources.conf
uanlz_web/var/www/uauditweb/assets/css/: progress.css
uanlz_web/var/www/uauditweb/assets/js/: progress.js
uanlz_web/var/www/uauditweb/mods/alerts/: action-add.html  actions.html  inc.links.html  index.html  input-add.html  inputs.html  inputsconfig.html  rule-add.html  rules.html  stats.html  z.inc.footer.html  z.inc.header.html
uanlz_web/var/www/uauditweb/mods/log2json/: events.html  eventsph.html  inc.links.html  index.html  inputs.html  outputs.html  z.inc.footer.html  z.inc.header.html
var/www/uauditweb/: inc.footer.html  inc.header.html  login.html  main.html  resources.conf
var/www/uauditweb/assets/css/: login.css  navbar-top-fixed.css  sticky-footer.css
var/www/uauditweb/assets/js/: cx2login.js  cx2main.js
var/www/uauditweb/mods/alerts/: index.html  input-add.html  inputs.html  inputsconfig.html  rules.html  z.inc.header.html
var/www/uauditweb/mods/log2json/: eventsph.html  outputs.html  z.inc.header.html
var/www/uauditweb/modules/: alerts-events.html  alerts-inputs.html  alerts.html  log2json-events.html  log2json-eventsperhost.html  log2json-inputs.html  log2json-outputs.html  log2json.html
